<resources>
    <!--application fonts-->
    <string name="Roboto_Light" translatable="false">sans-serif-light</string>
    <string name="Roboto_Medium" translatable="false">sans-serif-medium</string>
    <string name="Roboto_Regular" translatable="false">sans-serif</string>


    <string name="app_name">TestTutu</string>
    <string name="mail_info_tutu_ru">info@tutu.ru</string>
    <string name="test_app">Test App</string>
    <string name="timetable">Расписание</string>
    <string name="about_app">О приложении</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">Страна: </string>
    <string name="city">Город:</string>
    <string name="copyright">Авторское право</string>
    <string name="app_version">Версия приложения</string>
    <string name="current_version_app">Текущая версия приложения</string>
    <string name="point_from">Пункты отправления</string>
    <string name="point_to">Пункты назначения</string>
    <string name="choose_point_to">Выбрать пункт назначения</string>
    <string name="choose_point_from">Выбрать пункт отправления</string>
    <string name="choose_date_from">Выбрать дату отправления</string>
    <string name="copyright_text">Данное приложение является собственностью компании  \"TUTU.RU\".
    Все права защищены \u00A9.</string>
    <string name="null_result">Не найдено информации…</string>
    <string name="district">Район:</string>
    <string name="region">Регион:</string>
    <string name="full_station_name">Полное наименование:</string>
    <string name="choose_date">Выбирете дату</string>
    <string name="ready">Готово</string>
</resources>
